--- a/home.html
+++ b/home.html
@@ -33,8 +33,55 @@
     <div class="divider"></div>
     <!-- Welcome -->
      <div>
-        <h3>🔥Welcome to Payoo</h3>
+        <h3 class="font-bold text-2xl">🔥Welcome to Payoo</h3>
+        <p class="text-gray-500 mt-2">Enjoy easy and convenient financial services with us. <br> Cashout charge is low and </p>
      </div>
+     <!-- btn -->
+<div class="grid grid-cols-3 gap-3 mt-8">
+    <div class="w-[123px] h-[86px] border border-gray-400 rounded-lg pt-4 ">
+  <div class="flex justify-center items-center flex-col gap-2">
+      <img src="assets/wallet1.png" alt="">
+    <p class="text-[#080808] opacity-70">Add money</p>
+
+  </div>
+</div>
+<div class="w-[123px] h-[86px] border border-gray-400 rounded-lg pt-4">
+  <div class="flex justify-center items-center flex-col gap-2">
+      <img src="assets/money1.png" alt="">
+    <p class="text-[#080808] opacity-70">Cash Out</p>
+
+  </div>
+</div>
+<div class="w-[123px] h-[86px] border border-gray-400 rounded-lg pt-4 ">
+  <div class="flex justify-center items-center flex-col gap-2">
+      <img src="assets/send1.png" alt="">
+    <p class="text-[#080808] opacity-70">Transfer Money</p>
+
+  </div>
+</div>
+<div class="w-[123px] h-[86px] border border-gray-400 rounded-lg pt-4 ">
+  <div class="flex justify-center items-center flex-col gap-2">
+      <img src="assets/bonus1.png" alt="">
+    <p class="text-[#080808] opacity-70">Get Bonus</p>
+
+  </div>
+</div>
+<div class="w-[123px] h-[86px] border border-gray-400 rounded-lg pt-4">
+  <div class="flex justify-center items-center flex-col gap-2">
+      <img src="assets/purse1.png" alt="">
+    <p class="text-[#080808] opacity-70">Pay Bill</p>
+
+  </div>
+</div>
+<div class="w-[123px] h-[86px] border border-gray-400 rounded-lg pt-4">
+  <div class="flex justify-center items-center flex-col gap-2">
+      <img src="assets/transaction1.png" alt="">
+    <p class="text-[#080808] opacity-70">Transactions</p>
+
+  </div>
+</div>
+</div>
+    
      </div>
     
    </main>
