--- a/home.html
+++ b/home.html
@@ -19,11 +19,11 @@
      <!-- balance -->
     <div class=" bg-[#F4F5F7]">
  <div class="bg-white  p-6 ">
-      <div class="flex justify-between items-center gap-32">
+      <div class="flex justify-between items-center gap-25">
             <div class="flex items-center">
         <img class="w-[50px]" src="assets/Group.png" alt="">
         <div>
-            <h3  class="font-bold text-lg">$ <span id="money">45000</span></h3>
+            <h3  class="font-bold text-lg">$<span id="money">45000</span></h3>
             <p class="text-gray-500">Available Balance</p>
         </div>
      </div>
@@ -38,18 +38,18 @@
         <p class="text-gray-500 mt-2">Enjoy easy and convenient financial services with us. <br> Cashout charge is low and </p>
      </div>
      <!-- btn -->
-<div class="grid grid-cols-3 gap-3 mt-8">
-    <div id="add-money" class="w-[123px] h-[86px] border border-gray-400 rounded-lg pt-4 ">
-  <div class="flex justify-center items-center flex-col gap-2">
+<div class="grid grid-cols-1 gap-3 mt-8 ml-9">
+    <div id="add-money" class="w-[300px] border border-gray-400 rounded-3xl p-4 bg-blue-100">
+  <div class="flex justify-center items-center flex-col ">
       <img src="assets/wallet1.png" alt="">
-    <p class="text-[#080808] opacity-70">Add money</p>
+    <p class="text-[#080808] opacity-70 text-xl">Add money</p>
 
   </div>
 </div>
-<div id="cashOut-bttn" class="w-[123px] h-[86px] border border-gray-400 rounded-lg pt-4">
-  <div class="flex justify-center items-center flex-col gap-2">
+<div id="cashOut-bttn" class="w-[300px] border border-gray-400 rounded-3xl p-4  bg-blue-100">
+  <div class="flex justify-center items-center flex-col ">
       <img src="assets/money1.png" alt="">
-    <p class="text-[#080808] opacity-70">Cash Out</p>
+    <p class="text-[#080808] opacity-70 text-xl">Cash Out</p>
 
   </div>
 </div>
@@ -74,10 +74,10 @@
 
   </div>
 </div>
-<div id="transactionBTn" class="w-[123px] h-[86px] border border-gray-400 rounded-lg pt-4 ">
-  <div class="flex justify-center items-center flex-col gap-2">
+<div id="transactionBTn" class="w-[300px] border border-gray-400 rounded-3xl p-4 bg-blue-100 ">
+  <div class="flex justify-center items-center flex-col">
       <img src="assets/transaction1.png" alt="">
-    <p class="text-[#080808] opacity-70">Transactions</p>
+    <p class="text-[#080808] opacity-70 text-xl">Transactions</p>
 
   </div>
 </div>
